--- a/src/styles.less
+++ b/src/styles.less
@@ -1,10 +1,13 @@
 @primary-color: white;
 @bg: black;
-.blackbox_plus h2 {
-  color: @primary-color;
-  background-color: @bg;
-}
+//.blackbox_plus h2 {
+//  color: @primary-color;
+//  background-color: @bg;
+//}
 
+.bbox_plus_info_text {
+  text-shadow: 2px 2px 2px grey;
+}
 
 /* The alert message box */
 .bbox_plus_flash_message {
@@ -21,6 +24,13 @@
   //color: darkgreen; // To be overwritten
   border: 2px solid red;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.7);
+}
+
+//
+.bbox_plus_flash_message_type_info {
+  color: #31708f;
+  background: rgba(217, 237, 247, 0.9); // #d9edf7;
+  border-color: rgb(198, 219, 230); // or use #bce8f1;
 }
 
 // Colours based on https://isabelcastillo.com/error-info-messages-css
@@ -42,36 +52,19 @@
   border-color: red;
 }
 
-//
-.bbox_plus_flash_message_type_info {
-  color: #31708f;
-  background: rgba(217, 237, 247, 0.9); // #d9edf7;
-  border-color: rgb(198, 219, 230); // or use #bce8f1;
-}
-
-//
-//.alert {
-//  padding: 20px;
-//  background-color: #f44336; /* Red */
-//  color: white;
-//  margin-bottom: 15px;
-//}
-
 
 /* The close button */
 .bbox_plus_flash_message_closebtn {
   margin-left: 15px;
-  color: #999999;
+  color: black;
   font-weight: bold;
   float: right;
   font-size: 22px;
   line-height: 20px;
   cursor: pointer;
   transition: 0.3s;
-  //box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.7);
-  box-shadow: 7px 4px 12px 3px rgba(0,0,0,0.69);
-  /* When moving the mouse over the close button */
 
+  // When moving the mouse over the close button
   &:hover {
     color: black;
     font-size: 27px
