--- a/src/styles.less
+++ b/src/styles.less
@@ -75,3 +75,9 @@
   font-weight: bold;
 }
 
+.bbox_plus_button, .bbox_plus button {
+  background: #31708f;
+  color: white;
+  border: 2px solid darken(#31708f, 20%);
+  border-radius: 2px;
+}
