--- a/src/styles.less
+++ b/src/styles.less
@@ -76,8 +76,9 @@
 }
 
 .bbox_plus_button, .bbox_plus button {
-  background: #31708f;
-  color: white;
-  border: 2px solid darken(#31708f, 20%);
-  border-radius: 2px;
+  cursor: pointer;
+  //background: #31708f;
+  //color: white;
+  //border: 2px solid darken(#31708f, 20%);
+  //border-radius: 2px;
 }
